Simplify use of ObjectMapping